--- a/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv.json
@@ -181,7 +181,7 @@
                                 {"name" : "inputActivationSparsity",             "value" : false},
                                 {"name" : "outputActivationSparsity",             "value" : true},
                                 {"name" : "weightsSparsity",                      "value" : false},
-                                {"name" : "pipelining",                           "value" : true}
+                                {"name" : "pipelining",                           "value" : false}
                             ]
                         },
                         {
