--- a/src/vpux_plugin/CMakeLists.txt
+++ b/src/vpux_plugin/CMakeLists.txt
@@ -45,17 +45,10 @@ target_link_libraries(${VPUX_PLUGIN_TARGET}
     PRIVATE
         ${VPUX_PLUGIN_OBJS_TARGET})
 
-install(TARGETS ${VPUX_PLUGIN_TARGET}
+install(TARGETS ${VPUX_PLUGIN_TARGET} mcmCompiler
     RUNTIME DESTINATION ${IE_CPACK_RUNTIME_PATH} COMPONENT ${VPUX_DEVICE_NAME}
     ARCHIVE DESTINATION ${IE_CPACK_ARCHIVE_PATH} COMPONENT ${VPUX_DEVICE_NAME}
     LIBRARY DESTINATION ${IE_CPACK_LIBRARY_PATH} COMPONENT ${VPUX_DEVICE_NAME})
-
-if(X86_64 AND NOT WIN32)
-    install(TARGETS mcmCompiler
-        RUNTIME DESTINATION ${IE_CPACK_RUNTIME_PATH} COMPONENT ${VPUX_DEVICE_NAME}
-        ARCHIVE DESTINATION ${IE_CPACK_ARCHIVE_PATH} COMPONENT ${VPUX_DEVICE_NAME}
-        LIBRARY DESTINATION ${IE_CPACK_LIBRARY_PATH} COMPONENT ${VPUX_DEVICE_NAME})
-endif()
 
 if(AARCH64)
     install(FILES   $<TARGET_PROPERTY:NN,IMPORTED_LOCATION_NOCONFIG>
