--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+add_subdirectory(libs)
+
+add_subdirectory(unit)
+
 if(ENABLE_FUNCTIONAL_TESTS)
     add_subdirectory(functional)
 endif()
