--- a/tests_deprecated/models_helpers/CMakeLists.txt
+++ b/tests_deprecated/models_helpers/CMakeLists.txt
@@ -12,8 +12,10 @@ addIeTarget(
     NAME kmbTestData
     TYPE STATIC
     ROOT ${CMAKE_CURRENT_SOURCE_DIR}
-    INCLUDES ${CMAKE_CURRENT_BINARY_DIR}
-    LINK_LIBRARIES IE::ieTestHelpers
+    INCLUDES
+        ${CMAKE_CURRENT_BINARY_DIR}
+        $<TARGET_PROPERTY:IE::ieTestHelpers,INTERFACE_INCLUDE_DIRECTORIES>
+        $<TARGET_PROPERTY:IE::ieTestHelpers,INTERFACE_SYSTEM_INCLUDE_DIRECTORIES>
     DEFINES
         INSTANTIATE_TESTS=1
         PUBLIC
