--- a/src/mcmCompiler/config/compilation/release_kmb-sparse.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse.json
@@ -279,6 +279,10 @@
         "Singular": [
             "GenerateSparsityMapsUnpopulatedTensors",
             "GenerateSparsityMapsEltwise",
+            {
+              "name" : "ChainPipeliningTransform",
+              "select_stages" : 2
+            },
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
