--- a/src/mcmCompiler/config/compilation/release_kmb-sc_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sc_hde.json
@@ -331,6 +331,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateBlobKmb",
