--- a/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv.json
@@ -340,6 +340,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateDot",
