--- a/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
@@ -316,6 +316,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateBlobKmb",
