--- a/src/mcmCompiler/config/compilation/release_kmb-sc.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sc.json
@@ -360,6 +360,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateDot",
