--- a/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
@@ -317,6 +317,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateBlobKmb",
