--- a/config/compilation/release_kmb-sc_hde.json
+++ b/config/compilation/release_kmb-sc_hde.json
@@ -329,6 +329,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateBlobKmb",
