--- a/config/compilation/release_kmb.json
+++ b/config/compilation/release_kmb.json
@@ -336,6 +336,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateBlobKmb",
