--- a/config/compilation/release_kmb_with_CM_Conv.json
+++ b/config/compilation/release_kmb_with_CM_Conv.json
@@ -337,6 +337,13 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            {
+                "name": "GenerateDot",
+                "output": "output/dots/DMAOrdering.dot",
+                "scope": "OpModel",
+                "content": "full",
+                "html": true
+            },
             "DMAOrdering",
             {
                 "name": "GenerateDot",
