--- a/config/compilation/release_kmb_with_CM_Conv_hde.json
+++ b/config/compilation/release_kmb_with_CM_Conv_hde.json
@@ -315,6 +315,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateBlobKmb",
