--- a/config/compilation/release_kmb-sc.json
+++ b/config/compilation/release_kmb-sc.json
@@ -352,6 +352,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateDot",
