--- a/config/compilation/release_kmb-sparse_with_CM_Conv.json
+++ b/config/compilation/release_kmb-sparse_with_CM_Conv.json
@@ -337,6 +337,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateBlobKmb",
