--- a/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
+++ b/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
@@ -314,6 +314,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "DMAOrdering",
             "BuildGraphFileKmb",
             {
                 "name": "GenerateBlobKmb",
