--- a/artifacts/mcmCompilerInstallPackage/config/compilation/release_kmb-sparse_with_CM_Conv.json
+++ b/artifacts/mcmCompilerInstallPackage/config/compilation/release_kmb-sparse_with_CM_Conv.json
@@ -87,23 +87,6 @@
             "ComputeMemory",
             "AssignUniqueOpId",
             {
-                "name": "ApplyTargetVars",
-                "Vars": [
-                    {
-                        "name": "dmaControllers",
-                        "block": "nce",
-                        "var": "DMAControllers",
-                        "default": 1
-                    },
-                    {
-                        "name": "csramLimit",
-                        "block": "nce",
-                        "var": "CSRAM",
-                        "default": 0
-                    }
-                ]
-            },
-            {
                 "name": "CreateSourceStructure",
                 "VersionMajor": 3,
                 "VersionMinor": 11,
@@ -200,11 +183,11 @@
                             ]
                         },
                         {
-                            "name" : "Eltwise",
+                            "name" : "Add",
                             "strategies": [
                                 {"name" : "streamingStrategies",  "value" : ["StreamOverH"]},
                                 {"name" : "clusteringStrategies", "value" : ["SplitOverH","HKSwitch","Clustering"]},
-                                {"name" : "inputActivationSparsity",             "value" : true},
+                                {"name" : "inputActivationSparsity",             "value" : false},
                                 {"name" : "outputActivationSparsity",             "value" : true},
                                 {"name" : "weightsSparsity",                      "value" : false}
                             ]
@@ -320,8 +303,7 @@
               "producer_bound" : 256,
               "remove_barriers_in_upa_tail" : true,
               "remove_redundant_wait_barriers" : true
-            },
-            "LayoutDMA"
+            }
         ]
     },
     "validate": {
