--- a/artifacts/mcmCompilerInstallPackage/config/compilation/release_kmb.json
+++ b/artifacts/mcmCompilerInstallPackage/config/compilation/release_kmb.json
@@ -86,23 +86,6 @@
             "ComputeMemory",
             "AssignUniqueOpId",
             {
-                "name": "ApplyTargetVars",
-                "Vars": [
-                    {
-                        "name": "dmaControllers",
-                        "block": "nce",
-                        "var": "DMAControllers",
-                        "default": 1
-                    },
-                    {
-                        "name": "csramLimit",
-                        "block": "nce",
-                        "var": "CSRAM",
-                        "default": 0
-                    }
-                ]
-            },
-            {
                 "name": "CreateSourceStructure",
                 "VersionMajor": 3,
                 "VersionMinor": 11,
@@ -199,11 +182,11 @@
                             ]
                         },
                         {
-                            "name" : "Eltwise",
+                            "name" : "Add",
                             "strategies": [
                                 {"name" : "streamingStrategies",  "value" : ["StreamOverH"]},
                                 {"name" : "clusteringStrategies", "value" : ["SplitOverH","HKSwitch","Clustering"]},
-                                {"name" : "inputActivationSparsity",             "value" : true},
+                                {"name" : "inputActivationSparsity",             "value" : false},
                                 {"name" : "outputActivationSparsity",             "value" : true},
                                 {"name" : "weightsSparsity",                      "value" : false}
                             ]
@@ -280,11 +263,7 @@
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
-              "no_temporal_edges" : true,
-              "enable_cmx_concat" : true
-            },
-            {
-              "name" : "RecomputeImplicitOpMemoryLocations"
+              "no_temporal_edges" : true
             },
             {
                 "name": "TransitiveReduction",
@@ -323,9 +302,8 @@
               "barrier_bound" : 16,
               "producer_bound" : 256,
               "remove_barriers_in_upa_tail" : true,
-              "remove_redundant_wait_barriers" : true
-            },
-            "LayoutDMA"
+              "remove_redundant_wait_barriers" : true	
+            }
         ]
     },
     "validate": {
