Enable build on Windows as DLL or Cmake's OBJECT library
Always link model and metamodel as static libraries
Update .gitignore for MSVC

--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,16 @@ contrib/lemon/install/
 install/*
 build/
 build-debug/
+out/
 *.user
 .vscode
+.vs/
 *.blob
 *.dot
-*.json
 *:*
 *.svg
+*.log
 recordings/
-klockwork/
 klocwork/
 *.prototxt
 *.caffemodel
