--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -118,27 +118,31 @@ add_executable(deployer_unit_tests
     mcm_unit_tests.cpp
     ${deployer_src}
 )
-target_link_libraries (deployer_unit_tests gtest m)
+target_link_libraries (deployer_unit_tests gtest)
 target_link_libraries(deployer_unit_tests cm)
 target_link_libraries(deployer_unit_tests dep)
+if(UNIX)
+  target_link_libraries (deployer_unit_tests m)
+endif()
 endif(VALIDATION)
 
-target_link_libraries(mcm_unit_tests gtest m)
+target_link_libraries(mcm_unit_tests gtest)
 target_link_libraries(mcm_unit_tests cm)
+if(UNIX)
+  target_link_libraries(mcm_unit_tests m)
+endif()
 target_include_directories(mcm_unit_tests PRIVATE utils
       INTERFACE lp_scheduler lp_scheduler_pass)
 target_link_libraries(mcm_unit_tests lp_scheduler lp_scheduler_pass)
 #target_link_libraries(mcm_unit_tests gcomparator)
 
 add_subdirectory(layer)
+if(UNIX)
 add_subdirectory(system_tests/lp_scheduler/three_layer_conv_model)
-#add_subdirectory(system_tests/lp_scheduler/resnet)
 add_subdirectory(system_tests/lp_scheduler/tiny_yolo)
+endif()
+#add_subdirectory(system_tests/lp_scheduler/resnet)
 #add_subdirectory(system_tests/lp_scheduler/mobilenet)
-
-set(CMAKE_CXX_IMPLICIT_LINK_LIBRARIES stdc++)
-set(CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES "")
-set_target_properties(mcm_unit_tests PROPERTIES LINKER_LANGUAGE C)
 
 #file(GLOB layers
 #    "layers/*.cpp"
