--- a/tests/system_tests/lp_scheduler/three_layer_conv_model/CMakeLists.txt
+++ b/tests/system_tests/lp_scheduler/three_layer_conv_model/CMakeLists.txt
@@ -20,14 +20,17 @@ add_custom_command(TARGET generate_default_blob
                    COMMAND rm -rf ./output)
 add_dependencies(generate_default_blob three_layer_conv_model)
 
-
-add_executable(generate_random_binary_streams
-      generate_random_binary_streams.cpp)
-
 add_custom_target(generate_test_bench)
 add_custom_command(TARGET generate_test_bench
                    COMMAND echo "1x56x56x3" > in.txt
                    COMMAND ./generate_random_binary_streams -n 4 < in.txt
                    COMMAND rm in.txt)
-add_dependencies(generate_test_bench generate_random_binary_streams
+add_dependencies(generate_test_bench
                  generate_default_blob generate_lp_scheduler_blob)
+if (UNIX)
+# \todo: Fix generate_random_binary_streams.cpp portability
+add_executable(generate_random_binary_streams
+      generate_random_binary_streams.cpp)
+
+add_dependencies(generate_test_bench generate_random_binary_streams)
+endif()
