Support for ModelE (#953)
* temporal fix for ModelE

* fuse sigmoid only if it's the only child of its parent node

* only the first conv can be channelMajorConv

* remove unnecessary split strategy hack in CD

* avoid the use of HKSwitch when the parent is not a dpu layer

* 1. add unit test for eltwise+add
* 2. change unpopulated alignment

* weight alignment fix for the case of nonConv layers followed by a alignment needing Conv

* fix GO regression for other networks

* add new pass to detect eltwise with upa inputs

Co-authored-by: syao-2015 <shaojun.yao@intel.com>

--- a/tests/layer/CMakeLists.txt
+++ b/tests/layer/CMakeLists.txt
@@ -230,6 +230,9 @@ else()
     add_executable(deconv_fp16 deconv_fp16/deconv_fp16.cpp)
     target_link_libraries(deconv_fp16 cm)
 
+    add_executable(eltwise_conv eltwise_conv/eltwise_conv.cpp)
+    target_link_libraries(eltwise_conv cm)
+    
     add_executable(net_test_resnet50_fp16 net_test_resnet50_fp16/test.cpp net_test_resnet50_fp16/resnet50_fp16.cpp)
     target_link_libraries(net_test_resnet50_fp16 cm)
 
