--- a/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
+++ b/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
@@ -118,6 +118,7 @@
             "PlacementOfOps",
             "PostTrainingQuantize",
             "EltwiseToSWEltwise",
+            "MarkEltWiseUpaInputs",
             {
                 "name" : "GraphParameterOptimization",
                 "graphOptimizerConfig" : {
