--- a/src/frontend_mcm/CMakeLists.txt
+++ b/src/frontend_mcm/CMakeLists.txt
@@ -50,6 +50,7 @@ link_system_libraries(${TARGET_NAME}
     PRIVATE
         IE::inference_engine
         IE::inference_engine_transformations
+        IE::inference_engine_lp_transformations
         IE::pugixml
         IE::ngraph_reference
         IE::vpu_common_lib
