--- a/artifacts/mcmCompilerInstallPackage/config/compilation/release_kmb-sc.json
+++ b/artifacts/mcmCompilerInstallPackage/config/compilation/release_kmb-sc.json
@@ -135,6 +135,7 @@
             "PlacementOfOps",
             "PostTrainingQuantize",
             "EltwiseToSWEltwise",
+            "MarkEltWiseUpaInputs",
             {
                 "name" : "GraphParameterOptimization",
                 "graphOptimizerConfig" : {
@@ -229,6 +230,7 @@
             "ConvertOpsToTasks",
             "AdaptFixedPointCompute",
             "SetUpPPETasks",
+            "TaskMultiplePostOps",
             "ForceSerialize",
             "KMBOrderConversion",
             "AlignUnpopulatedTensors",
@@ -285,6 +287,11 @@
                 "content": "full",
                 "html": true
             },
+            {
+              "name" : "ChainPipeliningTransform",
+              "select_stages" : 2
+            },
+
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
