--- a/artifacts/mcmCompilerInstallPackage/config/compilation/release_kmb-sc_hde.json
+++ b/artifacts/mcmCompilerInstallPackage/config/compilation/release_kmb-sc_hde.json
@@ -118,6 +118,7 @@
             "PlacementOfOps",
             "PostTrainingQuantize",
             "EltwiseToSWEltwise",
+            "MarkEltWiseUpaInputs",
             {
                 "name" : "GraphParameterOptimization",
                 "graphOptimizerConfig" : {
