Enable static library build on Windows
It appears the only reliable way to force linkage of unreferenced global
objects during static library linking in MSVC is specifying each relevant
symbol during executable linking which can be done with linker pragmas.

Changed registration macros to ease maintenance of the pragmas enforcing
unique names and avoiding breakage on simple code changes (e.g. due to
_COUNTER_ use).

Included a small bash script for generating the pragmas.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,7 +122,11 @@ add_subdirectory(contrib/flatbuffers)
 #############################################################################################
 
 if (MSVC)
-    add_compile_options("/permissive-" "/EHsc")
+    add_compile_options(
+        "/permissive-"       # Disallow MSVC extensions (also enables iso646 keywords)
+        "/EHsc"              # Standard excaption handling (extern "C" never throws)
+        "/we4003"            # Error on missing macro parameters
+    )
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     add_compile_options("--no-gnu-unique" "-Wall" "-Wextra" "-Wshadow" "-Wnon-virtual-dtor"
                         "-pedantic" "-fstack-protector-all")
@@ -391,7 +395,7 @@ endif()
 add_library(model STATIC ${model})
 
 if (MCM_COMPILER_BUILD_STATIC_LIBS)
-    add_library(cm OBJECT ${base} ${logger} ${pass} ${compiler} ${syscalls})
+    add_library(cm STATIC ${base} ${logger} ${pass} ${compiler} ${syscalls})
     target_link_libraries(model PRIVATE cm)
 else()
     add_library(cm SHARED ${base} ${logger} ${pass} ${compiler} ${syscalls})
