update some compilation descriptors, they should not be so many. We need to port the passes to one and leave the rest variables indepedently

--- a/config/compilation/release_kmb-sparse.json
+++ b/config/compilation/release_kmb-sparse.json
@@ -222,6 +222,7 @@
     },
     "kmb_adapt": {
         "Singular": [
+            "DecideConcatLocation",
             "ConcatAsImplicit",
             "PermuteAsImplicit",
             "ReshapeAsImplicit",
@@ -288,6 +289,7 @@
             {
               "name" : "RecomputeImplicitOpMemoryLocations"
             },
+            "RecomputeTensorMultiClusterAttributesCauseOfSpilling",
             {
                 "name": "TransitiveReduction",
                 "filter": "MemoryRequirement"
