--- a/config/compilation/release_kmb_with_CM_Conv_hde.json
+++ b/config/compilation/release_kmb_with_CM_Conv_hde.json
@@ -205,6 +205,7 @@
     },
     "kmb_adapt": {
         "Singular": [
+            "DecideConcatLocation",
             "ConcatAsImplicit",
             "PermuteAsImplicit",
             "ReshapeAsImplicit",
