--- a/config/compilation/release_kmb-sc.json
+++ b/config/compilation/release_kmb-sc.json
@@ -222,6 +222,7 @@
     },
     "kmb_adapt": {
         "Singular": [
+            "DecideConcatLocation",
             "ConcatAsImplicit",
             "PermuteAsImplicit",
             "ReshapeAsImplicit",
@@ -279,13 +280,6 @@
         "Singular": [
             "GenerateSparsityMapsUnpopulatedTensors",
             "GenerateSparsityMapsEltwise",
-            {
-                "name": "GenerateDot",
-                "output": "output/dots/input_op_model.dot",
-                "scope": "OpModel",
-                "content": "full",
-                "html": true
-            },
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
@@ -293,16 +287,9 @@
               "enable_cmx_concat" : true
             },
             {
-              "name" : "RecomputeImplicitOpMemoryLocations",
-              "output": "mem_locations.txt"
+              "name" : "RecomputeImplicitOpMemoryLocations"
             },
-            {
-                "name": "GenerateDot",
-                "output": "output/dots/output_op_model.dot",
-                "scope": "OpModel",
-                "content": "full",
-                "html": true
-            },
+            "RecomputeTensorMultiClusterAttributesCauseOfSpilling",
             {
                 "name": "TransitiveReduction",
                 "filter": "MemoryRequirement"
@@ -354,13 +341,6 @@
         "Singular": [
             "RemoveRedundantUpdateBarriers",
             "BuildGraphFileKmb",
-            {
-                "name": "GenerateDot",
-                "output": "output/dots/before_serialization.dot",
-                "scope": "ControlModel",
-                "content": "full",
-                "html": true
-            },
             {
                 "name": "GenerateBlobKmb",
                 "output": "output/mcm.blob"
