--- a/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
@@ -206,6 +206,7 @@
     },
     "kmb_adapt": {
         "Singular": [
+            "DecideConcatLocation",
             "ConcatAsImplicit",
             "PermuteAsImplicit",
             "ReshapeAsImplicit",
