--- a/src/mcmCompiler/config/compilation/release_kmb-sc.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sc.json
@@ -223,6 +223,7 @@
     },
     "kmb_adapt": {
         "Singular": [
+            "DecideConcatLocation",
             "ConcatAsImplicit",
             "PermuteAsImplicit",
             "ReshapeAsImplicit",
@@ -281,18 +282,6 @@
         "Singular": [
             "GenerateSparsityMapsUnpopulatedTensors",
             "GenerateSparsityMapsEltwise",
-            {
-                "name": "GenerateDot",
-                "output": "output/dots/input_op_model.dot",
-                "scope": "OpModel",
-                "content": "full",
-                "html": true
-            },
-            {
-              "name" : "ChainPipeliningTransform",
-              "select_stages" : 2
-            },
-
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
@@ -300,16 +289,9 @@
               "enable_cmx_concat" : true
             },
             {
-              "name" : "RecomputeImplicitOpMemoryLocations",
-              "output": "mem_locations.txt"
+              "name" : "RecomputeImplicitOpMemoryLocations"
             },
-            {
-                "name": "GenerateDot",
-                "output": "output/dots/output_op_model.dot",
-                "scope": "OpModel",
-                "content": "full",
-                "html": true
-            },
+            "RecomputeTensorMultiClusterAttributesCauseOfSpilling",
             {
                 "name": "TransitiveReduction",
                 "filter": "MemoryRequirement"
@@ -362,13 +344,6 @@
             "RemoveRedundantUpdateBarriers",
             "DMAOrdering",
             "BuildGraphFileKmb",
-            {
-                "name": "GenerateDot",
-                "output": "output/dots/before_serialization.dot",
-                "scope": "ControlModel",
-                "content": "full",
-                "html": true
-            },
             {
                 "name": "GenerateBlobKmb",
                 "output": "output/mcm.blob"
