bug fix for software layers that failed

--- a/src/mcmCompiler/config/compilation/release_kmb-sc.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sc.json
@@ -316,6 +316,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
@@ -342,6 +343,13 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            {
+                "name": "GenerateDot",
+                "output": "output/dots/DMAOrdering.dot",
+                "scope": "OpModel",
+                "content": "full",
+                "html": true
+            },
             "DMAOrdering",
             "BuildGraphFileKmb",
             {
