Removing transitiveReduction and layernumbering

--- a/config/compilation/release_kmb-sc.json
+++ b/config/compilation/release_kmb-sc.json
@@ -268,12 +268,7 @@
     "control_flows":{
         "Singular" : [
             "TaskControlFlows",
-            "TransitiveReduction",
-            "LayerNumbering",
-            "TransitiveReduction",
-            "LayerNumbering",
-            "NNCMX2DDRControlFlows",
-            "TransitiveReduction"
+            "NNCMX2DDRControlFlows"
         ]
     },
     "finalize": {
@@ -313,7 +308,6 @@
                 "name": "TransitiveReduction",
                 "filter": "MemoryRequirement"
             },
-            "TransitiveReduction",
             "LayerNumbering",
             {
                 "name": "GenerateWorkloads",
