--- a/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
@@ -291,6 +291,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
