--- a/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
@@ -293,6 +293,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
