--- a/src/mcmCompiler/config/compilation/release_kmb-sparse.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse.json
@@ -320,6 +320,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
