--- a/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv.json
@@ -314,6 +314,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
