--- a/config/compilation/release_kmb_with_CM_Conv_hde.json
+++ b/config/compilation/release_kmb_with_CM_Conv_hde.json
@@ -290,6 +290,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
