--- a/config/compilation/release_kmb-sc_hde.json
+++ b/config/compilation/release_kmb-sc_hde.json
@@ -304,6 +304,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
