--- a/config/compilation/release_kmb-sparse.json
+++ b/config/compilation/release_kmb-sparse.json
@@ -311,6 +311,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
