--- a/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
+++ b/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
@@ -289,6 +289,7 @@
               "ddr_control_edges" : true
             },
             "TransitiveReduction",
+            "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
