--- a/config/compilation/release_kmb-sparse.json
+++ b/config/compilation/release_kmb-sparse.json
@@ -319,6 +319,7 @@
               "allocator_mode": true,
               "ddr_control_edges" : true
             },
+            "SetSliceAddressesInCMX",
             "TransitiveReduction",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
