Rename `vpux` target to `vpux_al`
`al` stands for "Abstraction Layer".

To replect its purpose and allow to add more `vpux_*` targets without
name confusion.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,7 @@
 #
 
 add_subdirectory(utils)
-add_subdirectory(vpux)
+add_subdirectory(vpux_al)
 add_subdirectory(vpual_backend)
 add_subdirectory(mcmCompiler)
 add_subdirectory(frontend_mcm)
