--- a/src/kmb_plugin/CMakeLists.txt
+++ b/src/kmb_plugin/CMakeLists.txt
@@ -59,7 +59,7 @@ link_system_libraries(${KMB_PLUGIN_OBJS_TARGET}
 target_link_libraries(${KMB_PLUGIN_OBJS_TARGET}
     PUBLIC
         kmb_utils
-        vpux)
+        vpux_al)
 
 add_cpplint_target(${KMB_PLUGIN_OBJS_TARGET}_cpplint FOR_TARGETS ${KMB_PLUGIN_OBJS_TARGET})
 
@@ -122,4 +122,4 @@ target_link_libraries(${KMB_PLUGIN_STATIC_TARGET}
     PUBLIC
         kmb_utils
     PRIVATE
-        vpux)
+        vpux_al)
