Adding LayerNumbering at right place

--- a/config/compilation/release_kmb-sc_hde.json
+++ b/config/compilation/release_kmb-sc_hde.json
@@ -297,6 +297,7 @@
               "allocator_mode": true,
               "ddr_control_edges" : true
             },
+            "LayerNumbering",            
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
@@ -311,8 +312,7 @@
               "producer_bound" : 256,
               "remove_barriers_in_upa_tail" : true,
               "remove_redundant_wait_barriers" : true
-            },
-            "LayerNumbering"            
+            }
         ]
     },
     "validate": {
