--- a/config/compilation/release_kmb_with_CM_Conv_hde.json
+++ b/config/compilation/release_kmb_with_CM_Conv_hde.json
@@ -284,6 +284,7 @@
               "allocator_mode": true,
               "ddr_control_edges" : true
             },
+            "LayerNumbering",                        
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
             "PopulateInstructionListTables"
@@ -298,8 +299,7 @@
               "producer_bound" : 256,
               "remove_barriers_in_upa_tail" : true,
               "remove_redundant_wait_barriers" : true
-            },
-            "LayerNumbering"            
+            }
         ]
     },
     "validate": {
