Add pass to assign base ptrs to tensors

--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -260,6 +260,7 @@ set(pass
     "${PROJECT_SOURCE_DIR}/src/pass/finalization/is_dag.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/finalization/schedule_helper.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/finalization/arrange_execution.cpp"
+    "${PROJECT_SOURCE_DIR}/src/pass/finalization/assign_se_base_ptr.cpp"
 
     "${PROJECT_SOURCE_DIR}/src/pass/optimization/graph_parameter_optimization.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/optimization/strategy_manager.cpp"
