--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -62,6 +62,7 @@
               "enable_cmx_concat" : true,
               "enable_inplace_eltwise" : true
             },
+            "AssignSEBasePtr",
             {
                 "name" : "RecomputeImplicitOpAttr",
                 "attribute" : "Location"
