--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_B0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_B0.json
@@ -44,6 +44,7 @@
               "ddr_address_generation" : true,
               "no_temporal_edges" : true
             },
+            "AssignSEBasePtr",
             {
                 "name": "TransitiveReduction",
                 "filter": "MemoryRequirement"
