Revert "Merge branch 'vv/kmb-tests' into 'master'"
This reverts merge request !1157

--- a/tests_deprecated/CMakeLists.txt
+++ b/tests_deprecated/CMakeLists.txt
@@ -26,6 +26,10 @@ if (ENABLE_FUNCTIONAL_TESTS)
     add_subdirectory(functional)
 endif()
 
+if (ENABLE_BEH_TESTS)
+    add_subdirectory(behavior)
+endif()
+
 if(AARCH64)
     add_subdirectory(gapi_preproc)
 endif()
