Basic zero-api support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,4 +24,7 @@ if(ENABLE_HDDL2)
     add_subdirectory(hddl2_plugin)
     add_subdirectory(hddl2_backend)
 endif()
+if(ENABLE_ZEROAPI_BACKEND)
+    add_subdirectory(zero_backend)
+endif()
 add_subdirectory(vpux_plugin)
