--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.so filter=lfs diff=lfs merge=lfs -text
 artifacts/mcmCompilerInstallPackage/bin/* filter=lfs diff=lfs merge=lfs -text
 *.a filter=lfs diff=lfs merge=lfs -text
+*.lib filter=lfs diff=lfs merge=lfs -text
